Add check for missing visual rect updates and fix failures

Check if visual rect will change when an object is walked during
PrePaintTreeWalk but the object is not marked for checking paint
invalidation.

Found and fixed several issues:
- when a frame is relocated,set the LayoutView mayNeedPaintInvalidation().
- For clip change detection, we should not reset
  ancestorTransformedOrRootPaintLayer on sub frames.
- For SPv2, computeLocationInBacking() should just return paintOffset
  because the "backing" is the enclosing transform node.
- When LayoutTable's visual rect changes, we should check for paint
  invalidation of all LayoutTableCols which use LayoutTable's
  localVisualRect() as theirs.
- Don't inflate for filter if the filter is on a composited layer.

Also fixed flakiness of paint/invalidation/resize-iframe-text.html
(which discovered the clip change detection issue).

BUG=636271
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2733773004
Cr-Commit-Position: refs/heads/master@{#455266}

Former-commit-id: 2c0032c9ca74bd03925a7367f4482e4ec6f06278