third_party/WebKit/Source/core/paint/PrePaintTreeWalk.cpp
@@ -44,6 +44,8 @@ void PrePaintTreeWalk::walk(FrameView& rootFrame) {
   PrePaintTreeWalkContext initialContext;
   initialContext.treeBuilderContext =
       m_propertyTreeBuilder.setupInitialContext();
+  initialContext.ancestorTransformedOrRootPaintLayer =
+      rootFrame.layoutView()->layer();
 
   // GeometryMapper depends on paint properties.
   if (rootFrame.needsPaintPropertyUpdate() ||
@@ -65,7 +67,6 @@ void PrePaintTreeWalk::walk(FrameView& frameView,
   PrePaintTreeWalkContext context(parentContext);
   // ancestorOverflowLayer does not cross frame boundaries.
   context.ancestorOverflowPaintLayer = nullptr;
-  context.ancestorTransformedOrRootPaintLayer = frameView.layoutView()->layer();
   m_propertyTreeBuilder.updateProperties(frameView, context.treeBuilderContext);
   m_paintInvalidator.invalidatePaintIfNeeded(frameView,
                                              context.paintInvalidatorContext);
