third_party/WebKit/Source/core/paint/TablePaintInvalidator.cpp
@@ -26,8 +26,13 @@ PaintInvalidationReason TablePaintInvalidator::invalidatePaintIfNeeded() {
   // If any col changed background, we'll check all cells for background
   // changes.
   bool hasColChangedBackground = false;
+  bool visualRectChanged = m_context.oldVisualRect != m_context.newVisualRect;
   for (LayoutTableCol* col = m_table.firstColumn(); col;
        col = col->nextColumn()) {
+    // LayoutTableCol uses the table's localVisualRect(). Should check column
+    // for paint invalidation when table's visual rect changed.
+    if (visualRectChanged)
+      col->setMayNeedPaintInvalidation();
     // This ensures that the backgroundChangedSinceLastPaintInvalidation flag
     // is up-to-date.
     col->ensureIsReadyForPaintInvalidation();
